--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 # Created by https://www.gitignore.io/api/node,code,react,visualstudio
 # Edit at https://www.gitignore.io/?templates=node,code,react,visualstudio
+.env
 
 ### Code ###
 .vscode/*
