--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
   "author": "Mario, Milene e Ana",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.3",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/knex": "^0.16.1",
-    "@types/node": "^13.7.7",
+    "@types/node": "^14.0.13",
     "@types/uuid": "^8.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "express": "4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.20.11",
+    "knex": "^0.21.1",
+    "moment": "^2.27.0",
     "mysql": "^2.18.1",
-    "ts-node": "^8.6.2",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3",
-    "uuid": "^8.1.0"
+    "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.49",
+    "typescript": "^3.9.5",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
