--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@types/uuid": "^8.0.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
+    "dotenv-flow": "^3.1.0",
     "express": "4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "moment": "^2.27.0",
     "mysql": "^2.18.1",
+    "nestjs-config": "^1.4.6",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.49",
     "typescript": "^3.9.5",
